--- a/src/components/Forms/Forms.css
+++ b/src/components/Forms/Forms.css
@@ -13,7 +13,8 @@
     width: 309px;
     height: 600px;
     margin-bottom: 12px;
-
+    padding-top: 50px;
+    padding-bottom: 48px;
 }
 
 .box-principal div {
@@ -48,3 +49,5 @@ h1 {
     align-items: center;
 }
  */
+
+ 
